k8s/mesh/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: vrp-demo
spec:
  mtls:
    mode: STRICT
